# SubsystemPractice

./: .gitignore  CollisionSystem.cpp  EventDriven_fromSkeleton.cpp  FromSkeleton.cpp  GuidanceSubsystem.cpp  README.md  SensorFusionSubsystem.cpp  SpatialHashing.cpp  autonomousDrone.cpp  autonomousDrone.hpp
PythonPractice/: Battery.py  Interceptor.py  MultiAgentSensorFusion.py  SensorDetection.py  Test.py
Sim/: CMakeLists.txt  CMakePresets.json  main.cpp
Sim/Common/: Registry.hpp  Types.hpp
Sim/Vehicles/: Drone.cpp  Drone.hpp  Target.cpp  Target.hpp  VehicleBase.cpp  VehicleBase.hpp
Sim/tests/: test_vehicles.cpp
